--- a/circle.html
+++ b/circle.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Simple Circle - Google Map API demo</title>
-    <link rel="canonical" href="https://medium.com/@augustus0818/google-map-api-2-7ec675a30e7">
+    <link rel="canonical" href="https://letswrite.tw/google-map-api-geometry/">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <style>
       .container {
@@ -36,8 +36,8 @@
       <div class="row fixed-bottom">
         <div class="col">
           <div class="alert alert-info" role="alert">
-            Medium筆記文：<br/>
-            <a href="https://medium.com/@augustus0818/google-map-api-2-7ec675a30e7" target="_blank">Google Map API學習筆記-2：在地圖上畫個日本結界</a>
+            Let's Write 筆記文：<br/>
+            <a href="https://letswrite.tw/google-map-api-geometry/" target="_blank">Google Map API學習筆記-2：在地圖上畫個日本結界</a>
           </div>
         </div>
       </div>
