--- a/polyline.html
+++ b/polyline.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Simple Polyline, Polygon - Google Map API demo</title>
+    <title>Simple Polyline, Polygon - Google Maps API demo - Augustus - Let's Write</title>
     <link rel="canonical" href="https://letswrite.tw/google-map-api-geometry/">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <style>
@@ -37,7 +37,7 @@
         <div class="col">
           <div class="alert alert-info" role="alert">
             Let's Write 筆記文：<br/>
-            <a href="https://letswrite.tw/google-map-api-geometry/" target="_blank">Google Map API學習筆記-2：在地圖上畫個日本結界</a>
+            <a href="https://letswrite.tw/google-map-api-geometry/" target="_blank">Google Maps API學習筆記-2：在地圖上畫個日本結界</a>
           </div>
         </div>
       </div>
